--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,105 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/gradient_color"
     tools:context=".AboutUs">
 
-
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/gradient_color"
-        android:gravity="center_horizontal"
-        android:text="@string/LL"
-        android:textColor="#FFEB3B"
-
-
-        android:textSize="35sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="206dp"
-        android:layout_height="31dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="212dp"
-        android:text="PRADEEP GOPAL"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="373dp"
-        android:layout_height="29dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="115dp"
-        android:layout_marginEnd="37dp"
-        android:text="Institute Of Aeronautical Engineering College" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="133dp"
         android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="41dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="179dp"
-        android:text="PRATHYUSHA"
-        android:textStyle="bold" />
+        app:cardElevation="10dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="373dp"
-        android:layout_height="29dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="199dp"
-        android:layout_marginEnd="42dp"
-        android:text="Institute Of Aeronautical Engineering College" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-condensed"
+                android:paddingTop="10dp"
+                android:text="@string/l_amp_l"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="157dp"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-condensed"
+                android:paddingBottom="10dp"
+                android:text="@string/land_amp_lease"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="251dp"
-        android:text="SRINIDHI"
-        android:textStyle="bold" />
+        android:orientation="vertical"
+        android:layout_margin="20dp"
+        >
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="378dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="274dp"
-        android:layout_marginEnd="30dp"
-        android:text="SR Engineering College" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gradient_color"
+            android:text="About Us :"
+            android:textColorHint="@color/white"
+            android:textColor="#FFEB3B"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="35dp"
+            android:textSize="35sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="115dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="330dp"
-        android:layout_marginEnd="296dp"
-        android:text="SATHVIKA"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PRADEEP GOPAL"
+            android:textColor="#FFEB3B"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Institute Of Aeronautical Engineering College"
+            android:textColor="#FFEB3B"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:text="PRATHYUSHA"
+            android:textStyle="bold"
+            android:textColor="#FFEB3B"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Institute Of Aeronautical Engineering College"
+            android:textColor="#FFEB3B"/>
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SRINIDHI"
+            android:textStyle="bold"
+            android:textColor="#FFEB3B"
+            android:layout_marginTop="35dp"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SR Engineering College"
+            android:textColor="#FFEB3B"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:text="SATHVIKA"
+            android:textStyle="bold"
+            android:textColor="#FFEB3B"
+            />
 
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="396dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="351dp"
-        android:layout_marginEnd="10dp"
-        android:text="SR Engineering College" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SR Engineering College"
+            android:textColor="#FFEB3B"
+            />
 
 
-</RelativeLayout>
+    </LinearLayout>
+
+</LinearLayout>
